feat: add each validation process and custom exceptions